--- a/tscshop/pages/list-series/micro.html
+++ b/tscshop/pages/list-series/micro.html
@@ -77,7 +77,6 @@
 				<div class="row">
 					<div class="col-md-6 col-12">
 						<div class="account_header">
-
 						</div>
 					</div>
 					<div class="col-md-6 col-12 d-none d-md-block a-right">
@@ -153,7 +152,7 @@
 							</a>
 						</li>
 						<li class="nav-item level0 ">
-							<a class="a-img"  title="Products">
+							<a class="a-img" title="Products">
 								Products <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"
 									class="fa-caret-down">
 									<path
@@ -190,10 +189,10 @@
 				<div class="col-xs-12 a-left">
 					<ul class="breadcrumb">
 						<li class="home">
-							<a href="/index.html"><span>Home</span></a>
+							<a href="../index.html"><span>Home</span></a>
 							<span class="mr_lr">&nbsp;/&nbsp;</span>
 						</li>
-						<li><strong><span>Amplifier Products</span></strong></li>
+						<li><strong><span>Micro Series</span></strong></li>
 					</ul>
 				</div>
 			</div>
@@ -205,16 +204,15 @@
 				<div class="row">
 					<div class="main_container collection right-content col-12">
 						<div class="category-products products">
-							<h1 class="collectiontitle ">Products</h1>
+							<h1 class="collectiontitle "></h1>
 							 
 
 							<section
 								class="products-view view-grid products-view-grid collection_reponsive list_hover_pro">
-								<div class="row row-10Gutter listAllAmplifier">
-									<div class="loading-message text-center fs-2 d-flex justify-content-center align-items-center" style="height: 300px;">
-										Loading...
+								<div class="row row-10Gutter list-series-micro">
+									<div class="loading-message text-center fs-2">
+											Loading...
 									</div>
-									
 									<!-- data micro-->
 								</div>
 							</section>
@@ -388,7 +386,7 @@
 				</div>
 			</div>
 		</div>
-		<a id="back-to-top" class="backtop" title="Lên đầu trang">
+		<a href="#" id="back-to-top" class="backtop" title="Lên đầu trang">
 			<svg aria-hidden="true" focusable="false" data-prefix="far" data-icon="arrow-up" role="img"
 				xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="svg-inline--fa fa-arrow-up fa-w-14">
 				<path fill="currentColor"
@@ -396,6 +394,7 @@
 					class=""></path>
 			</svg></a>
 	</footer>
-	<script defer type="text/javascript" src="/assets/js/api/list/list-amplifier.js"></script>
+	
+	<script defer type="text/javascript" src="/assets/js/api/list/series-micro.js"></script>
 </body>
 </html>
