--- a/tscshop/pages/list-series/mixer.html
+++ b/tscshop/pages/list-series/mixer.html
@@ -193,7 +193,7 @@
 							<a href="/index.html"><span>Home</span></a>
 							<span class="mr_lr">&nbsp;/&nbsp;</span>
 						</li>
-						<li><strong><span>Amplifier Products</span></strong></li>
+						<li><strong><span>Mixer Series</span></strong></li>
 					</ul>
 				</div>
 			</div>
@@ -205,17 +205,15 @@
 				<div class="row">
 					<div class="main_container collection right-content col-12">
 						<div class="category-products products">
-							<h1 class="collectiontitle ">Products</h1>
-							 
+							<h1 class="collectiontitle "></h1>
 
 							<section
 								class="products-view view-grid products-view-grid collection_reponsive list_hover_pro">
-								<div class="row row-10Gutter listAllAmplifier">
+								<div class="row row-10Gutter list-series-mixer">
 									<div class="loading-message text-center fs-2 d-flex justify-content-center align-items-center" style="height: 300px;">
 										Loading...
 									</div>
-									
-									<!-- data micro-->
+									<!-- data mixer-->
 								</div>
 							</section>
 							<div class="section pagenav">
@@ -388,7 +386,7 @@
 				</div>
 			</div>
 		</div>
-		<a id="back-to-top" class="backtop" title="Lên đầu trang">
+		<a href="#" id="back-to-top" class="backtop" title="Lên đầu trang">
 			<svg aria-hidden="true" focusable="false" data-prefix="far" data-icon="arrow-up" role="img"
 				xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="svg-inline--fa fa-arrow-up fa-w-14">
 				<path fill="currentColor"
@@ -396,6 +394,9 @@
 					class=""></path>
 			</svg></a>
 	</footer>
-	<script defer type="text/javascript" src="/assets/js/api/list/list-amplifier.js"></script>
+	
+	<script defer type="text/javascript" src="/assets/js/api/list/series-mixer.js"></script>
 </body>
+
+
 </html>
