--- a/tscshop/pages/list-series/amplifier.html
+++ b/tscshop/pages/list-series/amplifier.html
@@ -193,7 +193,7 @@
 							<a href="/index.html"><span>Home</span></a>
 							<span class="mr_lr">&nbsp;/&nbsp;</span>
 						</li>
-						<li><strong><span>Amplifier Products</span></strong></li>
+						<li><strong><span>Amplifier Series</span></strong></li>
 					</ul>
 				</div>
 			</div>
@@ -205,12 +205,12 @@
 				<div class="row">
 					<div class="main_container collection right-content col-12">
 						<div class="category-products products">
-							<h1 class="collectiontitle ">Products</h1>
+							<h1 class="collectiontitle "></h1>
 							 
 
 							<section
 								class="products-view view-grid products-view-grid collection_reponsive list_hover_pro">
-								<div class="row row-10Gutter listAllAmplifier">
+								<div class="row row-10Gutter list-series-amplifier">
 									<div class="loading-message text-center fs-2 d-flex justify-content-center align-items-center" style="height: 300px;">
 										Loading...
 									</div>
@@ -396,6 +396,6 @@
 					class=""></path>
 			</svg></a>
 	</footer>
-	<script defer type="text/javascript" src="/assets/js/api/list/list-amplifier.js"></script>
+	<script defer type="text/javascript" src="/assets/js/api/list/series-amplifier.js"></script>
 </body>
 </html>
