feat-user-footer

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="theme-color" content="#f02b2b" />
-    <link rel="canonical" href="/index.html" />
+    <link rel="canonical" href="index.html" />
     <meta name="revisit-after" content="2 days" />
     <meta name="robots" content="noodp,index,follow" />
     <meta
@@ -19,7 +19,7 @@
 
     <link
       rel="icon"
-      href="../bizweb.dktcdn.net/100/039/691/themes/895040/assets/favicon8331.png?1676344656178"
+      href="../bizweb.dktcdn.net/100/039/691/themes/895040/assets/logo.png?1676344656178"
       type="image/x-icon"
     />
 
@@ -128,8 +128,8 @@
                     />
                   </svg>
                 </div>
-                <a href="mailto:support@sapo.vn" title="support@sapo.vn"
-                  >support@sapo.vn</a
+                <a href="mailto:tsc.vietnam2024@gmail.com" title="tsc.vietnam2024@gmail.com"
+                  >tsc.vietnam2024@gmail.com</a
                 >
               </div>
               <div class="contact_header">
@@ -140,7 +140,7 @@
                     />
                   </svg>
                 </div>
-                <a href="tel:19006750" title="19006750">1900 6750</a>
+                <a href="tel:19006750" title="19006750">0902576688</a>
               </div>
             </div>
           </div>
@@ -152,7 +152,7 @@
             <div class="col-xl-3 col-md-3 col-12 col-header">
               <div class="logo_center">
                 <div class="logo">
-                  <a href="/index.html" class="logo-wrapper">
+                  <a href="index.html" class="logo-wrapper">
                     <img
                       width="150"
                       height="40"
@@ -188,12 +188,12 @@
           <nav class="header-nav">
             <ul class="item_big">
               <li class="nav-item active">
-                <a class="a-img" href="/index.html" title="Home">
+                <a class="a-img" href="index.html" title="Home">
                   <span>Home</span>
                 </a>
               </li>
               <li class="nav-item">
-                <a class="a-img" href="gioi-thieu.html" title="About us">
+                <a class="a-img" href="/tscshop/gioi-thieu.html" title="About us">
                   <span>About us</span>
                 </a>
               </li>
@@ -417,15 +417,15 @@
             <div class="col-lg-6 col-md-7 col-12">
               <ul class="menu_footer">
                 <li>
-                  <a href="/index.html" title="Home">Home</a>
+                  <a href="index.html" title="Home">Home</a>
                 </li>
 
                 <li>
-                  <a href="gioi-thieu.html" title="About us">About us</a>
+                  <a href="/tscshop/gioi-thieu.html" title="About us">About us</a>
                 </li>
 
                 <li>
-                  <a href="collections/all.html" title="Products">Products</a>
+                  <a href="" title="Products">Products</a>
                 </li>
               </ul>
             </div>
@@ -435,7 +435,7 @@
                   <a
                     class="twitter"
                     href="tel:#"
-                    title="Theo dõi TSShop trên Twitter"
+                    title="Theo dõi TSC trên Twitter"
                   >
                     <svg
                       width="12"
@@ -540,7 +540,7 @@
                 <div class="contact-ft clearfix">
                   <span class="title_contact">Address</span>
                   <span class="content_contact">
-                    Tầng 6 - Tòa nhà Ladeco - 266 Đội Cấn, Hà Nội,
+                    Marzahner Chaussee 109, 12681 Berlin
                   </span>
                 </div>
                 <div class="contact-ft clearfix">
@@ -550,16 +550,16 @@
                     href="tel:19006750"
                     title="19006750"
                   >
-                    1900 6750
+                    0902576688
                   </a>
                 </div>
                 <div class="contact-ft clearfix">
                   <span class="title_contact">Email</span>
                   <a
                     class="content_contact"
-                    href="mailto:support@sapo.vn"
-                    title="support@sapo.vn"
-                    >support@sapo.vn</a
+                    href="mailto:tsc.vietnam2024@gmail.com"
+                    title="tsc.vietnam2024@gmail.com"
+                    >tsc.vietnam2024@gmail.com</a
                   >
                 </div>
               </div>
@@ -569,15 +569,15 @@
                 <h4 class="title-menu clicked">News</h4>
                 <ul class="list-menu toggle-mn">
                   <li class="li_menu">
-                    <a href="/index.html" title="Home">Home</a>
+                    <a href="index.html" title="Home">Home</a>
                   </li>
 
                   <li class="li_menu">
-                    <a href="gioi-thieu.html" title="About us">About us</a>
+                    <a href="/tscshop/gioi-thieu.html" title="About us">About us</a>
                   </li>
 
                   <li class="li_menu">
-                    <a href="collections/all.html" title="Products">Products</a>
+                    <a href="" title="Products">Products</a>
                   </li>
                 </ul>
               </div>
@@ -587,15 +587,15 @@
                 <h4 class="title-menu clicked">Support</h4>
                 <ul class="list-menu toggle-mn">
                   <li class="li_menu">
-                    <a href="/index.html" title="Home">Home</a>
+                    <a href="index.html" title="Home">Home</a>
                   </li>
 
                   <li class="li_menu">
-                    <a href="gioi-thieu.html" title="About us">About us</a>
+                    <a href="/tscshop/gioi-thieu.html" title="About us">About us</a>
                   </li>
 
                   <li class="li_menu">
-                    <a href="collections/all.html" title="Products">Products</a>
+                    <a href="" title="Products">Products</a>
                   </li>
                 </ul>
               </div>
@@ -610,7 +610,6 @@
               id="copyright"
               class="col-lg-12 col-md-12 col-xs-12 fot_copyright"
             >
-              <div class="wsp">TSShop</div>
             </div>
           </div>
         </div>
