--- a/tscshop/gioi-thieu.html
+++ b/tscshop/gioi-thieu.html
@@ -8,7 +8,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="theme-color" content="#f02b2b" />
-    <link rel="canonical" href="/index.html" />
+    <link rel="canonical" href="index.html" />
     <meta name="revisit-after" content="2 days" />
     <meta name="robots" content="noodp,index,follow" />
     <meta
@@ -43,11 +43,11 @@
       property="og:description"
       content="Với giao diện được thiết kế đơn giản, phù hợp với nhiều ngành nghề Betashop chính là gợi ý tuyệt với cho các website điện máy"
     />
-    <meta property="og:url" content="/index.html" />
-    <meta property="og:site_name" content="betashop-theme" />
+    <meta property="og:url" content="index.html" />
+    <meta property="og:site_name" content="TSC" />
     <link
       rel="icon"
-      href="../bizweb.dktcdn.net/100/039/691/themes/895040/assets/favicon8331.png?1676344656178"
+      href="../bizweb.dktcdn.net/100/039/691/themes/895040/assets/logo.png?1676344656178"
       type="image/x-icon"
     />
 
@@ -255,8 +255,8 @@
                     />
                   </svg>
                 </div>
-                <a href="mailto:support@sapo.vn" title="support@sapo.vn"
-                  >support@sapo.vn</a
+                <a href="mailto:tsc.vietnam2024@gmail.com" title="tsc.vietnam2024@gmail.com"
+                  >tsc.vietnam2024@gmail.com</a
                 >
               </div>
               <div class="contact_header">
@@ -267,7 +267,7 @@
                     />
                   </svg>
                 </div>
-                <a href="tel:19006750" title="19006750">1900 6750</a>
+                <a href="tel:19006750" title="19006750">0902576688</a>
               </div>
             </div>
           </div>
@@ -279,12 +279,12 @@
             <div class="col-xl-3 col-md-3 col-12 col-header">
               <div class="logo_center">
                 <div class="logo">
-                  <a href="/index.html" class="logo-wrapper">
+                  <a href="index.html" class="logo-wrapper">
                     <img
                       width="150"
                       height="40"
                       src="../bizweb.dktcdn.net/100/039/691/themes/895040/assets/logo.png?1676344656178"
-                      alt="logo betashop-theme"
+                      alt="logo TSC"
                     />
                   </a>
                 </div>
@@ -345,8 +345,7 @@
         <div class="wrap_main menu_mobile">
           <nav class="header-nav">
             <ul class="item_big">
-              <li class="nav-item active">
-                tscshop<a class="a-img" href="/index.html" title="Home">
+              <li class="nav-item active"><a class="a-img" href="index.html" title="Home">
                   <span>Home</span>
                 </a>
               </li>
@@ -356,7 +355,7 @@
                 </a>
               </li>
               <li class="nav-item level0">
-                <a class="a-img" href="collections/all.html" title="Product">
+                <a class="a-img" href="" title="Product">
                   Products
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
@@ -394,7 +393,7 @@
           <div class="col-xs-12 a-left">
             <ul class="breadcrumb">
               <li class="home">
-                <a href="/index.html"><span>Home</span></a>
+                <a href="index.html"><span>Home</span></a>
                 <span class="mr_lr">&nbsp;/&nbsp;</span>
               </li>
 
@@ -412,88 +411,55 @@
           <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12">
               <div class="page-title category-title">
-                <h1 class="title-head"><a href="#">Giới thiệu</a></h1>
+                <h1 class="title-head"><a href="#">About Us</a></h1>
               </div>
               <div class="content-page rte">
                 <p style="text-align: justify">
-                  Betashop&nbsp;thành lập năm 2015, thuộc quyền quản lý của Công
-                  ty TNHH Beta.Với quy mô sản phẩm kinh doanh lớn, đa dạng và
-                  phong phú, Betashop&nbsp;có trên 3000 mặt hàng thuộc chủng
-                  loại điện tử, điện lạnh, gia dụng, kỹ thuật số, thiết bị tin
-                  học, thiết bị giải trí, viễn thông. ..
+                  Welcome to TSC, your premier destination for high-quality audio equipment. At TSC, we specialize in providing top-of-the-line speakers, microphones, and amplifiers designed to meet the needs of both professionals and enthusiasts alike.
                 </p>
 
                 <p style="text-align: justify">
-                  Với chiến lược tiết kiệm tối đa và tạo môi trường an tâm mua
-                  sắm, Betashop&nbsp;chú trọng xây dựng lợi ích thiết thực nhất
-                  cho khách hàng hiện nay.&nbsp;
+                  <strong>Our Mission</strong><br />
+                  Our mission is to deliver exceptional audio solutions that enhance your listening experience. We are committed to innovation, quality, and customer satisfaction, ensuring that every product we offer meets the highest standards of performance and reliability.
                 </p>
 
                 <p style="text-align: justify">
-                  <strong>SẢN PHẨM TỐT - GIÁ TIẾT KIỆM</strong><br />
-                  Được sự hỗ trợ từ các nhà sản xuất phân phối sản phẩm chuyên
-                  nghiệp hàng đầu tại Việt nam, các sản phẩm tại Betashop là
-                  hàng chính hãng, có nguồn gốc xuất xứ rõ ràng, chế độ bảo hành
-                  bảo trì theo tiêu chuẩn của nhà sản xuất.&nbsp;
+                  <strong>Our Products</strong><br />
+                  Speakers: Our range of speakers is crafted to deliver crystal-clear sound and powerful performance. Whether you’re setting up a home theater, a professional studio, or a live event, our speakers provide the perfect audio solution.
                 </p>
 
                 <p style="text-align: justify">
-                  Giá cả của được bán theo tiêu chí “bán hàng tại kho”, do đó
-                  luôn thấp hơn so với thị trường, giúp người mua tiết kiệm được
-                  rất nhiều khoản kinh phí mua sắm. Đặc biệt, bên cạnh bán lẻ,
-                  Betashop&nbsp;có chế độ hỗ trợ giá tốt cho đơn vị có nhu cầu
-                  làm đại lý.
+                  Microphones: From dynamic to condenser microphones, we offer a variety of options to capture every nuance of your sound. Ideal for recording, broadcasting, and live performances, our microphones are designed to deliver clarity and precision.
                 </p>
 
                 <p style="text-align: justify">
-                  Betashop&nbsp;cũng là công ty&nbsp;có mức sản phẩm đầy đủ và
-                  đa dạng cao. Duy nhất tại đây, khách hàng có thể tìm thấy
-                  nhiều mã sản phẩm hiện không có ở nhiều siêu thị điện máy.
+                  Amplifiers: Our amplifiers are engineered to provide robust power and exceptional sound quality. Perfect for any audio setup, our amplifiers ensure your sound is always at its best.
                 </p>
 
                 <p style="text-align: justify">
-                  <strong>TIẾT KIỆM THỜI GIAN VÀ CÔNG SỨC</strong><br />
-                  Để tiết kiệm thời gian và đảm bảo mọi cá nhân, đơn vị trên
-                  toàn quốc đều có thể mua sắm, Betashop lựa chọn hình thức kinh
-                  doanh chính là bán hàng online với những quy chế chặt chẽ về
-                  sự an toàn cũng như tiện lợi cho người mua:
+                  <strong>Why Choose TSC?</strong><br />
+                  Quality Assurance: We use only the highest quality materials and the latest technology to ensure our products are durable and reliable.
                 </p>
 
                 <p style="text-align: justify">
-                  + Toàn bộ hình ảnh trên website đều được mô tả tỉ mỉ, chi
-                  tiết. Hình ảnh chụp thật 100%. Mọi thông tin đều rõ ràng, minh
-                  bạch.<br />
-                  + Sử dụng các phương thức thanh toán đa dạng, có độ tin cậy
-                  cao như: thanh toán tiền sau khi nhận hàng, chuyển khoản, bảo
-                  kim<br />
-                  + Phương thức vận chuyển hàng nhanh chóng có bảo hiểm và dịch
-                  vụ lắp đặt tận nơi cho khách hàng.<br />
-                  + Cam kết bảo vệ thông tin riêng tư của khách hàng khi mua
-                  hàng online
+                  Customer Support: Our dedicated customer support team is always ready to assist you with any questions or concerns.
                 </p>
 
                 <p style="text-align: justify">
-                  Ngoài ra, khi có nhu cầu tham khảo trực tiếp sản phẩm, khách
-                  hàng cũng có thể đến tại kho và văn phòng giao dịch tại Hà
-                  Nội.
+                  Innovation: We continuously invest in research and development to bring you the latest advancements in audio technology.
                 </p>
 
                 <p style="text-align: justify">
-                  <strong>DỊCH VỤ CHĂM SÓC, HẬU MÃI CHU ĐÁO</strong><br />
-                  Khi mua sắm tại Betashop, khách hàng sẽ được nhân viên tư vấn
-                  chuyên sâu, định hướng lựa chọn sản phẩm phù hợp nhất với nhu
-                  cầu sử dụng và tài chính. Mục tiêu cuối cùng là mang lại những
-                  thông tin thực sự khách quan, chính xác nhất và sự thoải mái
-                  và hài lòng cho khách hàng khi lựa chọn mua hàng. Betashop
-                  cũng đặc biệt dành nhiều chính sách ưu đãi chăm sóc cho khách
-                  hàng thân thiết, gắn bó.
+                  <strong>Our Commitment</strong><br />
+                  At TSC, we believe in building lasting relationships with our customers. We are dedicated to providing products that not only meet but exceed your expectations. Join us on our journey to create the ultimate audio experience.
                 </p>
 
                 <p style="text-align: justify">
-                  Thành lập trên quan điểm kinh doanh nghiêm túc, chuyên nghiệp,
-                  Betashop luôn nhất quán trên hướng đi mang tới cho khách hàng
-                  cảm nhận khác biệt về sự phục vụ tận tình - tiện lợi tối đa,
-                  lấy chữ tâm làm đầu và mục đích gắn kết khách hàng bền lâu.
+                  Thank you for choosing TSC. We look forward to serving you.
+                </p>
+
+                <p style="text-align: justify">
+                  Feel free to customize this draft to better fit your company’s specific details and tone. If you need any more help, just let me know!
                 </p>
               </div>
             </div>
@@ -509,7 +475,7 @@
             <div class="col-lg-6 col-md-7 col-12">
               <ul class="menu_footer">
                 <li>
-                  <a href="/index.html" title="Home">Home</a>
+                  <a href="index.html" title="Home">Home</a>
                 </li>
 
                 <li>
@@ -517,7 +483,7 @@
                 </li>
 
                 <li>
-                  <a href="collections/all.html" title="Product">Product</a>
+                  <a href="" title="Product">Product</a>
                 </li>
               </ul>
             </div>
@@ -527,7 +493,7 @@
                   <a
                     class="twitter"
                     href="tel:#"
-                    title="Theo dõi betashop-theme trên Twitter"
+                    title="Theo dõi TSC trên Twitter"
                   >
                     <svg
                       width="12"
@@ -548,7 +514,7 @@
                     href="#"
                     target="_blank"
                     aria-label="Instagram"
-                    title="Theo dõi betashop-theme trên Instagram"
+                    title="Theo dõi TSC trên Instagram"
                   >
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
@@ -579,7 +545,7 @@
                     href="#"
                     target="_blank"
                     aria-label="Facebook"
-                    title="Theo dõi betashop-theme trên Facebook"
+                    title="Theo dõi TSC trên Facebook"
                   >
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
@@ -602,7 +568,7 @@
                     href="#"
                     target="_blank"
                     aria-label="Youtube"
-                    title="Theo dõi betashop-theme trên youtube"
+                    title="Theo dõi TSC trên youtube"
                   >
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
@@ -632,7 +598,7 @@
                 <div class="contact-ft clearfix">
                   <span class="title_contact">Address</span>
                   <span class="content_contact">
-                    Tầng 6 - Tòa nhà Ladeco - 266 Đội Cấn, Hà Nội,
+                    Marzahner Chaussee 109, 12681 Berlin
                   </span>
                 </div>
                 <div class="contact-ft clearfix">
@@ -642,16 +608,16 @@
                     href="tel:19006750"
                     title="19006750"
                   >
-                    1900 6750
+                    0902576688
                   </a>
                 </div>
                 <div class="contact-ft clearfix">
                   <span class="title_contact">Email</span>
                   <a
                     class="content_contact"
-                    href="mailto:support@sapo.vn"
-                    title="support@sapo.vn"
-                    >support@sapo.vn</a
+                    href="mailto:tsc.vietnam2024@gmail.com"
+                    title="tsc.vietnam2024@gmail.com"
+                    >tsc.vietnam2024@gmail.com</a
                   >
                 </div>
               </div>
@@ -661,7 +627,7 @@
                 <h4 class="title-menu clicked">News</h4>
                 <ul class="list-menu toggle-mn">
                   <li class="li_menu">
-                    <a href="/index.html" title="Home">Home</a>
+                    <a href="index.html" title="Home">Home</a>
                   </li>
 
                   <li class="li_menu">
@@ -669,7 +635,7 @@
                   </li>
 
                   <li class="li_menu">
-                    <a href="collections/all.html" title="Product">Product</a>
+                    <a href="" title="Product">Product</a>
                   </li>
                 </ul>
               </div>
@@ -679,7 +645,7 @@
                 <h4 class="title-menu clicked">Support</h4>
                 <ul class="list-menu toggle-mn">
                   <li class="li_menu">
-                    <a href="/index.html" title="Home">Home</a>
+                    <a href="index.html" title="Home">Home</a>
                   </li>
 
                   <li class="li_menu">
@@ -687,7 +653,7 @@
                   </li>
 
                   <li class="li_menu">
-                    <a href="collections/all.html" title="Product">Product</a>
+                    <a href="" title="Product">Product</a>
                   </li>
                 </ul>
               </div>
@@ -702,7 +668,6 @@
               id="copyright"
               class="col-lg-12 col-md-12 col-xs-12 fot_copyright"
             >
-              <div class="wsp">tscShop</div>
             </div>
           </div>
         </div>
@@ -7808,87 +7773,6 @@ Popup cart mobile
       	</button>
       </div>
     </script>
-    <div id="popup-cart-desktop" class="popup-cart">
-      <div class="header-popcart">
-        <div class="top-cart-header">
-          <span
-            >Bạn đã thêm [<a class="cart-popup-name" href="#"></a>] vào giỏ
-            hàng</span
-          >
-        </div>
-        <a class="noti-cart-count" href="cart.html" title="Giỏ hàng">
-          Giỏ hàng của bạn hiện có <span class="count_item_pr"></span> sản phẩm
-        </a>
-        <a title="Đóng" class="cart_btn-close" href="javascript:;"
-          ><svg
-            xmlns="http://www.w3.org/2000/svg"
-            xmlns:xlink="http://www.w3.org/1999/xlink"
-            version="1.1"
-            width="512"
-            height="512"
-            x="0"
-            y="0"
-            viewBox="0 0 365.696 365.696"
-            style="enable-background: new 0 0 512 512"
-            xml:space="preserve"
-            class=""
-          >
-            <g>
-              <path
-                xmlns="http://www.w3.org/2000/svg"
-                d="m243.1875 182.859375 113.132812-113.132813c12.5-12.5 12.5-32.765624 0-45.246093l-15.082031-15.082031c-12.503906-12.503907-32.769531-12.503907-45.25 0l-113.128906 113.128906-113.132813-113.152344c-12.5-12.5-32.765624-12.5-45.246093 0l-15.105469 15.082031c-12.5 12.503907-12.5 32.769531 0 45.25l113.152344 113.152344-113.128906 113.128906c-12.503907 12.503907-12.503907 32.769531 0 45.25l15.082031 15.082031c12.5 12.5 32.765625 12.5 45.246093 0l113.132813-113.132812 113.128906 113.132812c12.503907 12.5 32.769531 12.5 45.25 0l15.082031-15.082031c12.5-12.503906 12.5-32.769531 0-45.25zm0 0"
-                fill="#ffffff"
-                data-original="#000000"
-                style=""
-                class=""
-              />
-            </g></svg
-        ></a>
-      </div>
-      <div class="cartPopupContainer"></div>
-    </div>
-
-    <div id="popup-cart-mobile" class="popup-cart-mobile">
-      <div class="header-popcart">
-        <div class="top-cart-header">
-          <span>
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-              <path
-                d="M438.6 105.4C451.1 117.9 451.1 138.1 438.6 150.6L182.6 406.6C170.1 419.1 149.9 419.1 137.4 406.6L9.372 278.6C-3.124 266.1-3.124 245.9 9.372 233.4C21.87 220.9 42.13 220.9 54.63 233.4L159.1 338.7L393.4 105.4C405.9 92.88 426.1 92.88 438.6 105.4H438.6z"
-              />
-            </svg>
-            Thêm vào giỏ hàng thành công
-          </span>
-        </div>
-        <div class="media-content bodycart-mobile"></div>
-
-        <span title="Đóng" class="cart_btn-close iconclose">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            xmlns:xlink="http://www.w3.org/1999/xlink"
-            version="1.1"
-            id="Capa_1"
-            x="0px"
-            y="0px"
-            viewBox="0 0 512.001 512.001"
-            style="enable-background: new 0 0 512.001 512.001"
-            xml:space="preserve"
-          >
-            <g>
-              <g>
-                <path
-                  d="M284.286,256.002L506.143,34.144c7.811-7.811,7.811-20.475,0-28.285c-7.811-7.81-20.475-7.811-28.285,0L256,227.717    L34.143,5.859c-7.811-7.811-20.475-7.811-28.285,0c-7.81,7.811-7.811,20.475,0,28.285l221.857,221.857L5.858,477.859    c-7.811,7.811-7.811,20.475,0,28.285c3.905,3.905,9.024,5.857,14.143,5.857c5.119,0,10.237-1.952,14.143-5.857L256,284.287    l221.857,221.857c3.905,3.905,9.024,5.857,14.143,5.857s10.237-1.952,14.143-5.857c7.811-7.811,7.811-20.475,0-28.285    L284.286,256.002z"
-                />
-              </g>
-            </g>
-          </svg>
-        </span>
-        <div class="bottom-action">
-          <div class="cart_btn-close tocontinued">Tiếp tục mua hàng</div>
-          <a href="cart.html" class="checkout"> Tiến hành thanh toán </a>
-        </div>
-      </div>
-    </div>
     <script
       src="../bizweb.dktcdn.net/100/039/691/themes/895040/assets/notify8331.js?1676344656178"
       async
