--- a/tscshop/pages/detail-product/amplifier-detail.html
+++ b/tscshop/pages/detail-product/amplifier-detail.html
@@ -22,7 +22,7 @@
     <title>TSC</title>
     <meta
       name="keywords"
-      content="Acer E1-432k /Intel 2955U, betashop-theme, tscshop"
+      content="Acer E1-432k /Intel 2955U, TSC, tscshop"
     />
 
     <meta property="og:type" content="product" />
@@ -63,16 +63,16 @@
       content="Acer E1-432 là một sản phẩm có thiết kế theo phong cách thời trang với cấu hình giành cho các học sinh, sinh viên sử dụng với mục đích học tập. Với lớp vỏ được"
     />
     <meta property="og:url" content="acer-e1-432k-intel-2955u.html" />
-    <meta property="og:site_name" content="betashop-theme" />
+    <meta property="og:site_name" content="TSC" />
     <link
       rel="icon"
-      href="/bizweb.dktcdn.net/100/039/691/themes/895040/assets/favicon8331.png?1676344656178"
+      href="/bizweb.dktcdn.net/100/039/691/themes/895040/assets/logo.png?1676344656178"
       type="image/x-icon"
     />
 
     <script>
       var ProductReviewsAppUtil = ProductReviewsAppUtil || {};
-      ProductReviewsAppUtil.store = { name: "betashop-theme" };
+      ProductReviewsAppUtil.store = { name: "TSC" };
     </script>
     <link rel="preconnect" href="https://fonts.googleapis.com/" />
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
@@ -167,8 +167,8 @@
                     />
                   </svg>
                 </div>
-                <a href="mailto:support@sapo.vn" title="support@sapo.vn"
-                  >support@sapo.vn</a
+                <a href="mailto:tsc.vietnam2024@gmail.com" title="tsc.vietnam2024@gmail.com"
+                  >tsc.vietnam2024@gmail.com</a
                 >
               </div>
               <div class="contact_header">
@@ -179,7 +179,7 @@
                     />
                   </svg>
                 </div>
-                <a href="tel:19006750" title="19006750">1900 6750</a>
+                <a href="tel:19006750" title="19006750">0902576688</a>
               </div>
             </div>
           </div>
@@ -196,7 +196,7 @@
                       width="150"
                       height="40"
                       src="/bizweb.dktcdn.net/100/039/691/themes/895040/assets/logo.png?1676344656178"
-                      alt="logo betashop-theme"
+                      alt="logo TSC"
                     />
                   </a>
                 </div>
@@ -232,7 +232,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="a-img" href="gioi-thieu.html" title="About us">
+                <a class="a-img" href="/tscshop/gioi-thieu.html" title="About us">
                   <span>About us</span>
                 </a>
               </li>
@@ -496,11 +496,11 @@
                 </li>
 
                 <li>
-                  <a href="gioi-thieu.html" title="About us">About us</a>
+                  <a href="/tscshop/gioi-thieu.html" title="About us">About us</a>
                 </li>
 
                 <li>
-                  <a href="collections/all.html" title="Products">Products</a>
+                  <a href="" title="Products">Products</a>
                 </li>
               </ul>
             </div>
@@ -510,7 +510,7 @@
                   <a
                     class="twitter"
                     href="tel:#"
-                    title="Theo dõi betashop-theme trên Twitter"
+                    title="Theo dõi TSC trên Twitter"
                   >
                     <svg
                       width="12"
@@ -531,7 +531,7 @@
                     href="#"
                     target="_blank"
                     aria-label="Instagram"
-                    title="Theo dõi betashop-theme trên Instagram"
+                    title="Theo dõi TSC trên Instagram"
                   >
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
@@ -562,7 +562,7 @@
                     href="#"
                     target="_blank"
                     aria-label="Facebook"
-                    title="Theo dõi betashop-theme trên Facebook"
+                    title="Theo dõi TSC trên Facebook"
                   >
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
@@ -585,7 +585,7 @@
                     href="#"
                     target="_blank"
                     aria-label="Youtube"
-                    title="Theo dõi betashop-theme trên youtube"
+                    title="Theo dõi TSC trên youtube"
                   >
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
@@ -615,7 +615,7 @@
                 <div class="contact-ft clearfix">
                   <span class="title_contact">Address</span>
                   <span class="content_contact">
-                    Tầng 6 - Tòa nhà Ladeco - 266 Đội Cấn, Hà Nội,
+                    Marzahner Chaussee 109, 12681 Berlin
                   </span>
                 </div>
                 <div class="contact-ft clearfix">
@@ -625,16 +625,16 @@
                     href="tel:19006750"
                     title="19006750"
                   >
-                    1900 6750
+                    0902576688
                   </a>
                 </div>
                 <div class="contact-ft clearfix">
                   <span class="title_contact">Email</span>
                   <a
                     class="content_contact"
-                    href="mailto:support@sapo.vn"
-                    title="support@sapo.vn"
-                    >support@sapo.vn</a
+                    href="mailto:tsc.vietnam2024@gmail.com"
+                    title="tsc.vietnam2024@gmail.com"
+                    >tsc.vietnam2024@gmail.com</a
                   >
                 </div>
               </div>
@@ -648,11 +648,11 @@
                   </li>
 
                   <li class="li_menu">
-                    <a href="gioi-thieu.html" title="About us">About us</a>
+                    <a href="/tscshop/gioi-thieu.html" title="About us">About us</a>
                   </li>
 
                   <li class="li_menu">
-                    <a href="collections/all.html" title="Products">Products</a>
+                    <a href="" title="Products">Products</a>
                   </li>
                 </ul>
               </div>
@@ -666,11 +666,11 @@
                   </li>
 
                   <li class="li_menu">
-                    <a href="gioi-thieu.html" title="About us">About us</a>
+                    <a href="/tscshop/gioi-thieu.html" title="About us">About us</a>
                   </li>
 
                   <li class="li_menu">
-                    <a href="collections/all.html" title="Products">Products</a>
+                    <a href="" title="Products">Products</a>
                   </li>
                 </ul>
               </div>
@@ -685,7 +685,6 @@
               id="copyright"
               class="col-lg-12 col-md-12 col-xs-12 fot_copyright"
             >
-              <div class="wsp">tscShop</div>
             </div>
           </div>
         </div>
