--- a/tscshop/pages/list-product/all-amplifier.html
+++ b/tscshop/pages/list-product/all-amplifier.html
@@ -14,7 +14,7 @@
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta name="description" content="">
 	<title>TSC </title>
-	<meta name="keywords" content="Tất cả sản phẩm, betashop-theme, tscshop" />
+	<meta name="keywords" content="Tất cả sản phẩm, TSC, tscshop" />
 
 
 	<meta property="og:type" content="website">
@@ -26,8 +26,8 @@
 
 	<meta property="og:description" content="">
 	<meta property="og:url" content="all.html">
-	<meta property="og:site_name" content="betashop-theme">
-	<link rel="icon" href="/bizweb.dktcdn.net/100/039/691/themes/895040/assets/favicon8331.png"
+	<meta property="og:site_name" content="TSC">
+	<link rel="icon" href="/bizweb.dktcdn.net/100/039/691/themes/895040/assets/logo.png"
 		type="image/x-icon" />
 
 	<link rel="preload" as="script"
@@ -88,7 +88,7 @@
 										d="M0 128C0 92.65 28.65 64 64 64H448C483.3 64 512 92.65 512 128V384C512 419.3 483.3 448 448 448H64C28.65 448 0 419.3 0 384V128zM48 128V150.1L220.5 291.7C241.1 308.7 270.9 308.7 291.5 291.7L464 150.1V127.1C464 119.2 456.8 111.1 448 111.1H64C55.16 111.1 48 119.2 48 127.1L48 128zM48 212.2V384C48 392.8 55.16 400 64 400H448C456.8 400 464 392.8 464 384V212.2L322 328.8C283.6 360.3 228.4 360.3 189.1 328.8L48 212.2z" />
 								</svg>
 							</div>
-							<a href="mailto:support@sapo.vn" title="support@sapo.vn">support@sapo.vn</a>
+							<a href="mailto:tsc.vietnam2024@gmail.com" title="tsc.vietnam2024@gmail.com">tsc.vietnam2024@gmail.com</a>
 						</div>
 						<div class="contact_header">
 							<div class="icon_contact">
@@ -97,7 +97,7 @@
 										d="M511.2 387l-23.25 100.8c-3.266 14.25-15.79 24.22-30.46 24.22C205.2 512 0 306.8 0 54.5c0-14.66 9.969-27.2 24.22-30.45l100.8-23.25C139.7-2.602 154.7 5.018 160.8 18.92l46.52 108.5c5.438 12.78 1.77 27.67-8.98 36.45L144.5 207.1c33.98 69.22 90.26 125.5 159.5 159.5l44.08-53.8c8.688-10.78 23.69-14.51 36.47-8.975l108.5 46.51C506.1 357.2 514.6 372.4 511.2 387z" />
 								</svg>
 							</div>
-							<a href="tel:19006750" title="19006750">1900 6750</a>
+							<a href="tel:19006750" title="19006750">0902576688</a>
 						</div>
 					</div>
 				</div>
@@ -112,7 +112,7 @@
 								<a href="/index.html" class="logo-wrapper">
 									<img width="150" height="40"
 										src="/bizweb.dktcdn.net/100/039/691/themes/895040/assets/logo.png?1676344656178"
-										alt="logo betashop-theme">
+										alt="logo TSC">
 								</a>
 							</div>
 						</div>
@@ -148,7 +148,7 @@
 							</a>
 						</li>
 						<li class="nav-item ">
-							<a class="a-img" href="gioi-thieu.html" title="About us">
+							<a class="a-img" href="/tscshop/gioi-thieu.html" title="About us">
 								<span>About us</span>
 							</a>
 						</li>
@@ -242,17 +242,17 @@
 								<a href="/index.html" title="Home">Home</a>
 							</li>
 							<li>
-								<a href="gioi-thieu.html" title="About us">About us</a>
+								<a href="/tscshop/gioi-thieu.html" title="About us">About us</a>
 							</li>
 							<li>
-								<a href="collections/all.html" title="Products">Products</a>
+								<a href="" title="Products">Products</a>
 							</li>
 						</ul>
 					</div>
 					<div class="col-lg-6 col-md-5 col-12">
 						<ul class="social-footer">
 							<li>
-								<a class="twitter" href="tel:#" title="Theo dõi betashop-theme trên Twitter">
+								<a class="twitter" href="tel:#" title="Theo dõi TSC trên Twitter">
 									<svg width="12" height="12" xmlns="http://www.w3.org/2000/svg"
 										viewBox="0 0 512 512">
 										<path
@@ -262,7 +262,7 @@
 							</li>
 							<li>
 								<a class="instagram" href="#" target="_blank" aria-label="Instagram"
-									title="Theo dõi betashop-theme trên Instagram">
+									title="Theo dõi TSC trên Instagram">
 									<svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 22 22"
 										fill="none">
 										<path
@@ -279,7 +279,7 @@
 							</li>
 							<li>
 								<a class="facebook" href="#" target="_blank" aria-label="Facebook"
-									title="Theo dõi betashop-theme trên Facebook">
+									title="Theo dõi TSC trên Facebook">
 									<svg xmlns="http://www.w3.org/2000/svg" width="10" height="17" viewBox="0 0 10 17"
 										fill="none">
 										<path
@@ -290,7 +290,7 @@
 							</li>
 							<li>
 								<a class="youtube" href="#" target="_blank" aria-label="Youtube"
-									title="Theo dõi betashop-theme trên youtube">
+									title="Theo dõi TSC trên youtube">
 									<svg xmlns="http://www.w3.org/2000/svg" width="23" height="16" viewBox="0 0 23 16"
 										fill="none">
 										<path
@@ -316,20 +316,20 @@
 								<span class="title_contact">Address</span>
 								<span class="content_contact">
 
-									Tầng 6 - Tòa nhà Ladeco - 266 Đội Cấn, Hà Nội,
+									Marzahner Chaussee 109, 12681 Berlin
 
 								</span>
 							</div>
 							<div class="contact-ft clearfix">
 								<span class="title_contact">Tel</span>
 								<a class="content_contact" href="tel:19006750" title="19006750">
-									1900 6750
+									0902576688
 								</a>
 							</div>
 							<div class="contact-ft clearfix">
 								<span class="title_contact">Email</span>
-								<a class="content_contact" href="mailto:support@sapo.vn"
-									title="support@sapo.vn">support@sapo.vn</a>
+								<a class="content_contact" href="mailto:tsc.vietnam2024@gmail.com"
+									title="tsc.vietnam2024@gmail.com">tsc.vietnam2024@gmail.com</a>
 							</div>
 						</div>
 					</div>
@@ -343,10 +343,10 @@
 									<a href="/index.html" title="Home">Home</a>
 								</li>
 								<li class="li_menu">
-									<a href="gioi-thieu.html" title="About us">About us</a>
+									<a href="/tscshop/gioi-thieu.html" title="About us">About us</a>
 								</li>
 								<li class="li_menu">
-									<a href="collections/all.html" title="Products">Products</a>
+									<a href="" title="Products">Products</a>
 								</li>
 							</ul>
 						</div>
@@ -361,10 +361,10 @@
 									<a href="/index.html" title="Home">Home</a>
 								</li>
 								<li class="li_menu">
-									<a href="gioi-thieu.html" title="About us">About us</a>
+									<a href="/tscshop/gioi-thieu.html" title="About us">About us</a>
 								</li>
 								<li class="li_menu">
-									<a href="collections/all.html" title="Products">Products</a>
+									<a href="" title="Products">Products</a>
 								</li>
 							</ul>
 						</div>
@@ -376,14 +376,7 @@
 			<div class="container">
 				<div class="row tablet">
 					<div id="copyright" class="col-lg-12 col-md-12 col-xs-12 fot_copyright">
-						<div class="wsp">
-							<span class="mobile">© Bản quyền thuộc về <b>Caffein Team</b>
-								<span class="dash hidden-xs">|</span>
-							</span>
-							<span class="opacity1">Cung cấp bởi</span>
-							<a href="https://www.sapo.vn/?utm_campaign=cpn:kho_theme-plm:footer&amp;utm_source=Tu_nhien&amp;utm_medium=referral&amp;utm_content=fm:text_link-km:-sz:&amp;utm_term=&amp;campaign=kho_theme-sapo"
-								rel="nofollow" title="Sapo" target="_blank">Sapo</a>
-						</div>
+						
 					</div>
 				</div>
 			</div>
